@@ -1,4 +1,6 @@
 Changes for 1.7
+* Created new unit attachment property, "canAirBattle", which determines if a unit participates in a normal battle's air battle. (veqryn)
+
 * Allowing defense to ground their planes before an air battle (preceding a normal battle) if withdrawing is turned on, however if the territory is lost they die. (veqryn)
 
 * Fixed battle screen null pointer errors caused by maps with artillery units but no supportable units. Also fixed bug where maps without notes could not be closed. (veqryn)
